kubernetes/apps/core/envoy-gateway/config/gateway-external.yaml
# yaml-language-server: $schema=https://www.schemastore.org/any.json
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-external
  annotations:
    external-dns.kubernetes.io/target: external.${DOMAIN_0}
spec:
  gatewayClassName: envoy-external
  infrastructure:
    annotations:
      external-dns.kubernetes.io/hostname: external.${DOMAIN_0}
      lbipam.cilium.io/ips: 10.0.25.80
    labels:
      io.cilium/bgp-advertise: "true"
      network.k8s-gitops.io/lb-pool: dmz
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              envoy-gateway-access: external
      tls:
        certificateRefs:
          - name: certificate-issuer-domain-0-wildcard
          - name: certificate-issuer-domain-1-wildcard
          - name: certificate-issuer-domain-2-wildcard
