kubernetes/apps/core/envoy-gateway/config/gateway-internal.yaml
# yaml-language-server: $schema=https://www.schemastore.org/any.json
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-internal
  annotations:
    external-dns.kubernetes.io/target: internal.${DOMAIN_0}
spec:
  gatewayClassName: envoy-internal
  infrastructure:
    annotations:
      external-dns.kubernetes.io/hostname: internal.${DOMAIN_0}
      lbipam.cilium.io/ips: 10.0.20.80
    labels:
      io.cilium/bgp-advertise: "true"
      network.k8s-gitops.io/lb-pool: services
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - name: certificate-issuer-domain-0-wildcard
          - name: certificate-issuer-domain-1-wildcard
          - name: certificate-issuer-domain-2-wildcard
    - name: tcp
      hostname: "*.${DOMAIN_0}"
      port: 8443
      protocol: TLS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: certificate-issuer-domain-0-wildcard
          - name: certificate-issuer-domain-1-wildcard
          - name: certificate-issuer-domain-2-wildcard
